--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -12,6 +12,7 @@
   flex-direction: column;
   justify-content: center;
   margin-bottom: 100px;
+  margin-top: 50px;
 }
 
 .home-contents {
@@ -58,5 +59,6 @@
   }
   .home {
     min-height: 80vw;
+    margin-bottom: 50px;
   }
 }
